--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
     <img src="./images/image-qr-code.png" alt="qr code image" id="img-qr">
     <div class="details">
       <h1 class="header">Improve your front-end skills by building projects</h1>
       <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
